:memo: Garbage Collector 포스팅 작성(보완)